samples/_failures_safe/1761416937_8329c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_089217e3.c: In function ‘main’:
./samples/SAFE/__tmp_089217e3.c:164:9: error: expected declaration or statement at end of input
  164 |         printf("\nMatrix multiplication failed: dimension mismatch or overflow\n");
      |         ^~~~~~
./samples/SAFE/__tmp_089217e3.c:164:9: error: expected declaration or statement at end of input
